Remove RP-0 Configs and Fix Realplume Configs

--- a/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEM-LMDE.cfg
@@ -167,7 +167,7 @@ PART
 //	Lunar Module Descent Engine plume configuration.
 //	==================================================
 
-@PART[ROC-LEM-LMDE]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-LEM-LMDE]:BEFORE[RealPlume]
 {
 	PLUME
 	{
