--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -789,7 +789,7 @@ PART
 //	Lunar Module ascent stage plume configuration.
 //	==================================================
 
-@PART[ROC-LEMAscent]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-LEMAscent]:BEFORE[RealPlume]
 {
 	PLUME
 	{
