--- a/GameData/ROCapsules/PartConfigs/Orion/RP_Support_Orion.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/RP_Support_Orion.cfg
@@ -2,7 +2,7 @@
 //	Orion RealPlume Support
 //	============================================================================
 
-@PART[ROC-OrionESM]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-OrionESM]:BEFORE[RealPlume]
 {
 	PLUME_TEMPLATE
 	{
