Add Missing RemoteTech Configs & Fix Realplume Configs

--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -138,6 +138,41 @@ PART
 	{
 		name = RasterPropMonitorComputer
 	}
+
+	//	================================================================================
+	//	Comms
+	//	================================================================================
+
+	MODULE:NEEDS[!RemoteTech]
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 1.0
+		requiredResource = ElectricCharge
+		antennaPower = 400
+		packetResourceCost = 0.004
+	}
+	
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleSPU
+	}
+	
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleRTAntennaPassive
+		TechRequired = unlockParts
+
+		OmniRange = 1000000
+
+		TRANSMITTER
+		{
+			PacketInterval = 0.4
+			PacketSize = 0.27
+			PacketResourceCost = 0.025
+		}
+	}
 }
 
 //	================================================================================
