--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroBooster.cfg
@@ -129,7 +129,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-VoskhodRetroBooster]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-VoskhodRetroBooster]:BEFORE[RealPlume]
 {
 	PLUME
 	{
