--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -230,6 +230,38 @@ PART
 		toggleActionName = Toggle Antennas
 		allowAnimationWhileShielded = False
 	}
+
+	//  ============================================================================
+	//	Comms
+	//  ============================================================================
+	
+	MODULE:NEEDS[!RemoteTech]
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 1.0
+		requiredResource = ElectricCharge
+		antennaPower = 400
+		packetResourceCost = 0.004
+	}
+	
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleSPUPassive
+	}
+	
+	MODULE:NEEDS[RemoteTech]
+	{
+		name = ModuleRTAntennaPassive
+		OmniRange = 1000000
+		TRANSMITTER
+		{
+			PacketInterval = 0.3
+			PacketSize = 0.4
+			PacketResourceCost = 0
+		}
+	}
 }
 
 //	================================================================================
@@ -251,7 +283,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-VostokService]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-VostokService]:BEFORE[RealPlume]
 {
 	PLUME
 	{
