--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
@@ -164,7 +164,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-VoskhodAirlock]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-VoskhodAirlock]:BEFORE[RealPlume]
 {
 	PLUME
 	{
