--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV.cfg
@@ -134,7 +134,7 @@ PART
 //	Block V SPS plume configuration.
 //	==================================================
 
-@PART[ROC-ApolloEngineBlockV]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-ApolloEngineBlockV]:BEFORE[RealPlume]
 {
 	PLUME
 	{
