Fix Realplume Configs

--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
@@ -440,7 +440,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-Dragon2CM]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-Dragon2CM]:BEFORE[RealPlume]
 {
 	PLUME_TEMPLATE
 	{
@@ -450,7 +450,7 @@ PART
 		offset = 0
 	}
 }
-@PART[ROC-Dragon2CM]:BEFORE[zRealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-Dragon2CM]:BEFORE[zRealPlume]
 {
 	@PLUME[Hypergolic_LowerOrangeShock]
 	{
