Fix Realplume Configs

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSServiceModule.cfg
@@ -404,7 +404,7 @@ PART
 //	Configure RealPlume
 //	================================================================================
 
-@PART[ROC-SoyuzMSServiceModule|ROC-SoyuzMSServiceModule2]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-SoyuzMSServiceModule|ROC-SoyuzMSServiceModule2]:BEFORE[RealPlume]
 {
 	PLUME
 	{
