Fix Realplume Configs

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2AJ10-133.cfg
@@ -189,7 +189,7 @@ PART:NEEDS[!CH4]
 //	AJ10-133-LH plume configuration.
 //	==================================================
 
-@PART[ROC-D2AJ10-133]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-D2AJ10-133]:BEFORE[RealPlume]
 {
 	//main wispy red plume
 	PLUME
@@ -237,7 +237,7 @@ PART:NEEDS[!CH4]
 		shockconeScale = 0
 	}
 }
-@PART[ROC-D2AJ10-133]:FOR[zzPostRealPlumeROEngines]:NEEDS[SmokeScreen]
+@PART[ROC-D2AJ10-133]:FOR[zzPostRealPlumeROEngines]
 {
 	@EFFECTS
 	{
