--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2LES.cfg
@@ -125,7 +125,7 @@ PART:NEEDS[!CH4]
 	}
 }
 
-@PART[ROC-D2Block2LES]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-D2Block2LES]:BEFORE[RealPlume]
 {
 	PLUME
 	{
