--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block1LES.cfg
@@ -113,7 +113,7 @@ PART:NEEDS[!CH4]
 	}
 }
 
-@PART[ROC-D2Block1LES]:BEFORE[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-D2Block1LES]:BEFORE[RealPlume]
 {
 	PLUME
 	{
