Fix issues #49, #53, #60, #62 and also Plumes (#71)
#49: Staged decoupler issues
#53: ROC-LEMAscent drag cube generation
#60: Big-G minor issues
#62: ASET props in LEM internal model
... and a mass space-to-tab revolution.

--- a/GameData/ROCapsules/PartConfigs/Apollo/TU_Support_Apollo.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/TU_Support_Apollo.cfg
@@ -1,19 +1,20 @@
-//  ============================================================================
+//	============================================================================
 //	Apollo Textures Unlimited Support
-//  ============================================================================
+//	============================================================================
 
 KSP_MODEL_SHADER
 {
 	name = ROC-Apollo
-	
+
 	model = ROCapsules/Assets/DECQ/Apollo/CM
 	model = ROCapsules/Assets/DECQ/Apollo/CM_ForwardHS
 	model = ROCapsules/Assets/DECQ/Apollo/HGA
 	model = ROCapsules/Assets/DECQ/Apollo/RCS
-	TEXTURE
-    {
-        shader = TU/Metallic
-		
+
+	MATERIAL
+	{
+		shader = TU/Metallic
+
 		mesh = CM
 		mesh = mesh_030_026
 		mesh = mesh_030_019
@@ -30,8 +31,8 @@ KSP_MODEL_SHADER
 		mesh = ap-pro3_003
 		mesh = ap-pro3_005
 		mesh = ap-pro3_006
-		
-        PROPERTY
+
+		PROPERTY
 		{
 			name = _Color
 			color = 2.0, 2.0, 2.0
@@ -52,12 +53,13 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloSM
-	
+
 	model = ROCapsules/Assets/DECQ/Apollo/SM
-	TEXTURE
-    {
-        shader = TU/Metallic
-		
+
+	MATERIAL
+	{
+		shader = TU/Metallic
+
 		mesh = ERVISE
 		mesh = BottomCenter_002
 		mesh = Cube_005_002
@@ -67,8 +69,8 @@ KSP_MODEL_SHADER
 		mesh = mesh_030_008
 		mesh = mesh_030_030
 		mesh = mesh_030_033
-		
-        PROPERTY
+
+		PROPERTY
 		{
 			name = _Color
 			color = 1.5, 1.5, 1.5
