--- a/GameData/ROCapsules/PartConfigs/LEM/Internal_LEM.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/Internal_LEM.cfg
@@ -1,11 +1,10 @@
 INTERNAL
 {
-	name = Lem_cockpit
+	name = ROC-LEMInternal
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/LEM/Internal/LEM_IVA
-		scale = 1, 1, 1
-		rotation = 0, 0, 180
+		scale = 1.0, 1.0, 1.0
 	}
 	MODULE
 	{
