--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -14,7 +14,7 @@ PART
 
 	rescaleFactor = 1.512
 	scale = 1
-	node_stack_top	  = 0.0,  0.49839, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0,  0.49839, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.47261, 0.0, 0.0, -1.0, 0.0, 1
 	CenterOfBuoyancy = 0.0, 0.0, -0.05
 	//CenterOfDisplacement = 0.0, -0.3, 0.0
@@ -71,14 +71,14 @@ PART
 	{
 		rcs
 		{
-			AUDIO_MULTI
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				transformName = rcsTransform
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -106,24 +106,17 @@ PART
 		thrusterPower = 0.1067573
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-
-		PlumeName = soyuz_0p4
-		PlumeScale = 1,1,1
-
 		enablePitch = false
 		enableYaw = false
 		enableRoll = true
-
 		enableX = false
 		enableY = false
 		enableZ = false
-
 		PROPELLANT
 		{
 			name = HTP
 			ratio = 1.0
 		}
-		
 		atmosphereCurve
 		{
 			key = 0 137
