--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
@@ -5,11 +5,10 @@ PART
 	author = DECQ, Pap
 	
 	RSSROConfig = true
-	RP0conf = true
 	
-	//  ============================================================================
+	//	============================================================================
 	//	Model and Dimensions
-	//  ============================================================================
+	//	============================================================================
 	
 	MODEL
 	{
@@ -27,13 +26,13 @@ PART
 	
 	bulkheadProfiles = srf
 		
-	//  ============================================================================
+	//	============================================================================
 	//	Title, Description, Category, Techs
-	//  ============================================================================
+	//	============================================================================
 	
 	title = Apollo Service Module RCS Block
-    manufacturer = Marquardt Corp.
-    description = The attitude control thruster blocks of the Apollo Service Module (SM). Four of these allow full three-axis attitude control and translation of the Apollo CSM.
+	manufacturer = Marquardt Corp.
+	description = The attitude control thruster blocks of the Apollo Service Module (SM). Four of these allow full three-axis attitude control and translation of the Apollo CSM.
 	
 	mass = 0.014
 	
@@ -53,9 +52,9 @@ PART
 	
 	fuelCrossFeed = true
 	
-	//  ============================================================================
+	//	============================================================================
 	//	Thermo, Durability
-	//  ============================================================================
+	//	============================================================================
 		
 	crashTolerance = 8
 	maxTemp = 673.15
@@ -63,9 +62,9 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	
-	//  ============================================================================
+	//	============================================================================
 	//	Modules and Resources
-	//  ============================================================================
+	//	============================================================================
 	
 	MODULE
 	{
@@ -76,16 +75,16 @@ PART
 		runningEffectName = running
 		
 		PROPELLANT
-        {
-            name = Aerozine50
-            ratio = 0.5575
-        }
+		{
+			name = Aerozine50
+			ratio = 0.5575
+		}
 
-        PROPELLANT
-        {
-            name = NTO
-            ratio = 0.4425
-        }
+		PROPELLANT
+		{
+			name = NTO
+			ratio = 0.4425
+		}
 		
 		atmosphereCurve
 		{
@@ -95,28 +94,28 @@ PART
 		}
 	}
 	
-	//  ============================================================================
+	//	============================================================================
 	//	Comms
-	//  ============================================================================
+	//	============================================================================
 	
 	
 	
-	//  ============================================================================
+	//	============================================================================
 	//	Animations and Textures
-	//  ============================================================================
+	//	============================================================================
 	
 	EFFECTS
 	{
 		running
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				clip = sound_rocket_mini
 				transformName = RCSthruster
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
