--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
@@ -63,8 +63,8 @@ PART
 				transformName = RCSTHRUSTER
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -87,7 +87,7 @@ PART
 	MODULE
 	{
 		name = ModuleEnginesRF
-		transformName = thrustTransform
+		thrustVectorTransformName = thrustTransform
 		EngineType = SolidBooster
 		allowShutdown = False
 		throttleLocked = True
