--- a/GameData/ROCapsules/PartConfigs/LEM/TU_Support_LEM.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/TU_Support_LEM.cfg
@@ -1,22 +1,23 @@
-//  ============================================================================
+//	============================================================================
 //	LEM Textures Unlimited Support
-//  ============================================================================
+//	============================================================================
 
 KSP_MODEL_SHADER
 {
 	name = ROC-LEM
-	
+
 	model = ROCapsules/Assets/DECQ/LEM/LEM_Ascent
-    model = ROCapsules/Assets/DECQ/LEM/LEM_Decoupler
-    model = ROCapsules/Assets/DECQ/LEM/LEM_Descent
-    model = ROCapsules/Assets/DECQ/LEM/LEM_dockingPort
-    model = ROCapsules/Assets/DECQ/LEM/LEM_LMDE
-    model = ROCapsules/Assets/DECQ/LEM/LEM_Rover
-	TEXTURE
-    {
-        shader = SSTU/PBR/Metallic
-		
-        PROPERTY
+	model = ROCapsules/Assets/DECQ/LEM/LEM_Decoupler
+	model = ROCapsules/Assets/DECQ/LEM/LEM_Descent
+	model = ROCapsules/Assets/DECQ/LEM/LEM_dockingPort
+	model = ROCapsules/Assets/DECQ/LEM/LEM_LMDE
+	model = ROCapsules/Assets/DECQ/LEM/LEM_Rover
+
+	MATERIAL
+	{
+		shader = SSTU/PBR/Metallic
+
+		PROPERTY
 		{
 			name = _Color
 			color = 2.0, 2.0, 2.0
