--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -7,7 +7,6 @@ PART
 	category = Engine
 	subcategory = 0
 	RSSROConfig = true
-	RP0conf = true
 
 	crashTolerance = 10
 	maxTemp = 673.15
@@ -114,7 +113,7 @@ PART
 		gimbalTransformName = thrustTransform
 		gimbalRange = 4.0
 		useGimbalResponseSpeed = True
-		gimbalResponseSpeed = True
+		gimbalResponseSpeed = 15
 	}
 }
 
