Fix Parachute Temps

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Parachute.cfg
@@ -147,14 +147,10 @@ PART:NEEDS[!CH4]
 	}
 }
 
-@PART[ROC-D2Parachute]:NEEDS[DeadlyReentry,RealChute,RealismOverhaul]:AFTER[zzzRealismOverhaul]
+@PART[ROC-D2Parachute]:AFTER[zzzRealismOverhaul]
 {
 	@maxTemp = 3600
-	MODULE
-	{
-		name = ModuleAeroReentry
-		%skinMaxTemp = 3600
-	}
+	@skinMaxTemp = 3600
 }
 
 @PART[ROC-D2Parachute]:AFTER[zzzRealismOverhaul]
