--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteMain.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteMain.cfg
@@ -154,7 +154,7 @@ PART
 	@skinMaxTemp = 2673.15
 }
 
-@PART[ROC-SoyuzMSParachuteMain]:FOR[RealismOverhaul]:NEEDS[RealChute]
+@PART[ROC-SoyuzMSParachuteMain]:AFTER[zzzRealismOverhaul]
 {
 	@MODULE[RealChuteModule]
 	{
