--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteSpare.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSParachuteSpare.cfg
@@ -1,4 +1,3 @@
-
 PART
 {
 	name = ROC-SoyuzMSParachuteSpare
@@ -155,7 +154,7 @@ PART
 	@skinMaxTemp = 2673.15
 }
 
-@PART[ROC-SoyuzMSParachuteSpare]:FOR[RealismOverhaul]:NEEDS[RealChute]
+@PART[ROC-SoyuzMSParachuteSpare]:AFTER[zzzRealismOverhaul]
 {
 	@MODULE[RealChuteModule]
 	{
