--- a/GameData/ROCapsules/Assets/DECQ/SoyuzMS/Props/VZOR/prop.cfg
+++ b/GameData/ROCapsules/Assets/DECQ/SoyuzMS/Props/VZOR/prop.cfg
@@ -1,42 +1,46 @@
-PROP
+PROP:NEEDS[RasterPropMonitor]
 {
-  name = VZOR
+	name = VZOR
+
 	MODULE
-  	{
-	name = RasterPropMonitor
+	{
+		name = RasterPropMonitor
 
-	screenTransform = INPU1_LCD 
-									// Name of transform for the screen surface.
-	fontTransform = font  
-        fontLetterWidth = 16
-        fontLetterHeight = 32
-	textureLayerID = _Emissive
+		screenTransform = INPU1_LCD
 
-        emptyColor = 0,0,0,0
-    									// Name of texture layer to work with on the screen surface.
-	screenWidth = 60                      									// Screen width in letters.
-	screenHeight = 20
-                     									// Screen height in lines.
-	screenPixelWidth = 640               									// Width of the generated screen texture in pixels.
-	screenPixelHeight = 640               									// Height of the generated screen texture in pixels.
-	               									// Height of a font character.
-	cameraAspect = 1
+		// Name of transform for the screen surface.
+		fontTransform = font
+		fontLetterWidth = 16
+		fontLetterHeight = 32
+		textureLayerID = _Emissive
 
-                refreshDrawRate = 2
+		emptyColor = 0,0,0,0
+
+		// Name of texture layer to work with on the screen surface.
+		screenWidth = 60	// Screen width in letters.
+		screenHeight = 20
+
+		// Screen height in lines.
+		screenPixelWidth = 640	// Width of the generated screen texture in pixels.
+		screenPixelHeight = 640	// Height of the generated screen texture in pixels.
+
+		// Height of a font character.
+		cameraAspect = 1
+		refreshDrawRate = 2
 		refreshTextRate = 10
 		refreshDataRate = 20
 		buttonClickSound = Squad/Sounds/sound_click_tick
 		buttonClickVolume = 0.01
-        	globalButtons = NPU300+,NPU300-
+		globalButtons = NPU300+,NPU300-
 		noSignalTextureURL = ASET/ASET_Props/MFDs/ScreenPlates/nosignal
 
-//-----------------------------------		
-  
-               PAGE
-               {
+//-----------------------------------
+
+	PAGE
+	{
 		name = off
-                button  = NPU300
-	        default = yes
+		button  = NPU300
+		default = yes
 
 		BACKGROUNDHANDLER
 		{
@@ -56,17 +60,17 @@ PROP
 			toggleTargetIcon = 4
 			homeCrosshairColor = 255,255,255,64
 		}
+	}
 
-               } 
-//-----------------------------------	
-               
-               PAGE
-               {
+//-----------------------------------
+
+	PAGE
+	{
 		name = vzorcam
-                button  = NPU301
-	        //default = yes
+		button  = NPU301
+		//default = yes
 
-               BACKGROUNDHANDLER
+		BACKGROUNDHANDLER
 		{
 			name = JSISteerableCamera
 			method = RenderCamera
@@ -83,16 +87,8 @@ PROP
 			zoomOut = 0
 			toggleTargetIcon = 4
 			homeCrosshairColor = 255,255,255,64
-		}
-
-		
-               }
-
-//-----------------------------------	
-
+		}	
+	}
 }
 
-
-}	
-
-proxy = 0, 0, 0, 	0.15, 0.02, 0.15, 	0, 0, 1
+proxy = 0, 0, 0, 0.15, 0.02, 0.15, 0, 0, 1
