--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2ServiceModule.cfg
@@ -134,6 +134,6 @@ PART:NEEDS[!CH4]
 	{
 		name = ModuleRealAntenna
 		referenceGain = 2.0
-		RFBand = VHF	//Default to VHF-band
+		RFBand = UHF	//Default to UHF-band
 	}
 }
