Reformat & Tidy up Vostok Configs and fix up issues (#72)
Fixed Min Deployment Value of Vostok Parachute.

--- a/GameData/ROCapsules/PartConfigs/Vostok/TU_Support_Vostok.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/TU_Support_Vostok.cfg
@@ -1,74 +1,81 @@
-//  ============================================================================
+//	============================================================================
 //	Vostok/Voskhod Textures Unlimited Support
-//  ============================================================================
+//	============================================================================
 
 KSP_MODEL_SHADER
 {
 	name = ROC-Vostok
-	model = ROCapsules/Assets/RN/vostok_dec
-	model = ROCapsules/Assets/RN/vostok_sc
-	model = ROCapsules/Assets/RN/voskhod_sc
-	model = ROCapsules/Assets/RN/vostok_tdu
-	model = ROCapsules/Assets/RN/vostok_para
+
 	model = ROCapsules/Assets/RN/voskhod_airlock
-	TEXTURE
-    {
-        shader = SSTU/PBR/Metallic
+	model = ROCapsules/Assets/RN/voskhod_sc
+	model = ROCapsules/Assets/RN/voskhod_retro
+	model = ROCapsules/Assets/RN/voskhod_retro_dec
+	model = ROCapsules/Assets/RN/vostok_sc
+	model = ROCapsules/Assets/RN/vostok_dec
+	model = ROCapsules/Assets/RN/vostok_para
+
+	MATERIAL
+	{
+		shader = TU/Metallic
 		
 		// Decoupler
 		mesh = TDU_TopAntenna
 		mesh = TDU_MConnector
+		
 		// Capsules
 		mesh = SC_Out
 		mesh = SC_HFOut
 		mesh = SC_HBOut
 		mesh = SC_CPanel
+		
 		// Service Module
 		mesh = TDU_SHolder1
-        mesh = TDU_SHolder2
-        mesh = TDU_SHolder3
-        mesh = TDU_SHolder4
-        mesh = TDU_BHolders
-        mesh = TDU_CBoxes
-        mesh = TDU_LSensors
-        mesh = TDU_Radiator3L
-        mesh = TDU_Radiator3R
-        mesh = TDU_Radiator3L.001
-        mesh = TDU_Radiator3R.001
-        mesh = TDU_Radiator3L.002
-        mesh = TDU_Radiator3R.002
-        mesh = TDU_Radiator3L.003
-        mesh = TDU_Radiator3R.003
-        mesh = TDU_Radiator3L.004
-        mesh = TDU_Radiator3R.004
-        mesh = TDU_Radiator3L.005
-        mesh = TDU_Radiator3R.005
-        mesh = TDU_Radiator3L.006
-        mesh = TDU_Radiator3R.006
-        mesh = TDU_Radiator3L.007
-        mesh = TDU_Radiator3R.007
+		mesh = TDU_SHolder2
+		mesh = TDU_SHolder3
+		mesh = TDU_SHolder4
+		mesh = TDU_BHolders
+		mesh = TDU_CBoxes
+		mesh = TDU_LSensors
+		mesh = TDU_Radiator3L
+		mesh = TDU_Radiator3R
+		mesh = TDU_Radiator3L.001
+		mesh = TDU_Radiator3R.001
+		mesh = TDU_Radiator3L.002
+		mesh = TDU_Radiator3R.002
+		mesh = TDU_Radiator3L.003
+		mesh = TDU_Radiator3R.003
+		mesh = TDU_Radiator3L.004
+		mesh = TDU_Radiator3R.004
+		mesh = TDU_Radiator3L.005
+		mesh = TDU_Radiator3R.005
+		mesh = TDU_Radiator3L.006
+		mesh = TDU_Radiator3R.006
+		mesh = TDU_Radiator3L.007
+		mesh = TDU_Radiator3R.007
+		
 		// Parachute
 		mesh = cap
+		
 		// Airlock
 		mesh = airlock_base
-        mesh = ribs
-        mesh = bar1
-        mesh = bar2
+		mesh = ribs
+		mesh = bar1
+		mesh = bar2
 		
-        PROPERTY
+		PROPERTY
 		{
 			name = _Color
-			color = 2.0, 2.0, 2.0
+			color = 200, 200, 200
 		}
 		PROPERTY
 		{
 			name = _Metal
-			float = 0.65
+			float = 0.45
 		}
 		PROPERTY
 		{
 			name = _Smoothness
-			float = 0.95
+			float = 0.75
 		}
 	}
 }
