--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodRetroDecoupler.cfg
@@ -1,79 +1,76 @@
 PART
 {
-	module = Part
 	name = ROC-VoskhodRetroDecoupler
+	module = Part
 	author = RaiderNick, Pap
-	
+
 	RSSROConfig = true
-	RP0conf = true
-	
-	//  ============================================================================
+
+	//	============================================================================
 	//	Model and Dimensions
-	//  ============================================================================
-	
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/RN/voskhod_retro_dec
-		scale = 1.0, 1.0, 1.0
 	}
-	
+
 	scale = 1.0
 	rescaleFactor = 1.0
+
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, 0.07926, 0.0, 0.0, 1.0, 0.0, 0
-	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+
 	attachRules = 1,0,1,1,0
-	
-	bulkheadProfiles = size1, size0
-	
+
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-    sound_decoupler_fire = decouple
-		
-	//  ============================================================================
+	sound_decoupler_fire = decouple
+
+	//	============================================================================
 	//	Title, Description, Category, Techs
-	//  ============================================================================
-	
-	title = Voskhod Retro Decoupler
-	manufacturer = OKB-1
-	description = Place this above the Descent Module to decoupler the additional retro booster.
-	
-	mass = 0.036
-	
-	category = Coupling
-	subcategory = 0
-	
-	tags = soviet, decoupler, decouple, voskhod
-	
+	//	============================================================================
+
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
-	
-	stageOffset = 1
-    childStageOffset = 1
-	
-	//  ============================================================================
+	category = Coupling
+	subcategory = 0
+	title = Voskhod Retro Decoupler
+	manufacturer = OKB-1
+	description = Place this above the Descent Module to decoupler the additional retro booster.
+	tags = soviet, decoupler, decouple, voskhod
+
+	bulkheadProfiles = size1, size0
+
+	//	============================================================================
 	//	Thermo, Durability
-	//  ============================================================================
-		
+	//	============================================================================
+
+	mass = 0.036
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
 	crashTolerance = 8
+	breakingForce = 250
+	breakingTorque = 250
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	emissiveConstant = 0.4 // not too absorptive for reentry
-	thermalMassModifier = 2.0
-	
-	//  ============================================================================
+	fuelCrossFeed = True
+	stagingIcon = DECOUPLER_HOR
+	stageOffset = 1
+	childStageOffset = 1
+
+	//	============================================================================
 	//	Modules and Resources
-	//  ============================================================================
-	
+	//	============================================================================
+
 	MODULE
-    {
-        name = ModuleDecouple
-        explosiveNodeID = bottom
-        ejectionForce = 10
-    }
-	
-	//  ============================================================================
-	//	Animations and Textures
-	//  ============================================================================
-	
+	{
+		name = ModuleDecouple
+		menuName = Decouple Retro Booster
+		ejectionForce = 10
+		isOmniDecoupler = False
+		explosiveNodeID = bottom
+	}
 }
