--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodAirlock.cfg
@@ -1,197 +1,193 @@
 PART
 {
-	module = Part
 	name = ROC-VoskhodAirlock
+	module = Part
 	author = RaiderNick, Pap
-	
+
 	RSSROConfig = true
-	RP0conf = true
-	
-	//  ============================================================================
+
+	//	============================================================================
 	//	Model and Dimensions
-	//  ============================================================================
-	
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/RN/voskhod_airlock
-		scale = 1.0, 1.0, 1.0
 	}
-	
-	scale = 1.0
-	rescaleFactor = 1.0
-	
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
-	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
-	
-	bulkheadProfiles = size1
-	
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-	sound_decoupler_fire = decouple
-		
-	//  ============================================================================
-	//	Title, Description, Category, Techs
-	//  ============================================================================
-	
-	title = Voskhod Airlock
-	manufacturer = OKB-1
-	description = The Voskhod Airlock will allow for your crew to perform an EVA from the Voskhod airlock. Attach this to the node on the side of the Voskhod capsule. Transfer your crew memeber inside and perform your EVA. Be sure to decouple this before re-entry.
-	
-	mass = 0.339
-	
-	category = Utility
-	subcategory = 0
-	
-	tags = soviet, capsule, crew, voskhod, airlock, eva
-	
-	TechRequired = unlockParts
-	cost = 150
-	entryCost = 1
-	
-	stagingIcon = DECOUPLER_HOR
-	CrewCapacity = 1
-	
-	//  ============================================================================
-	//	Thermo, Durability
-	//  ============================================================================
-		
-	crashTolerance = 1
-	maxTemp = 773.15
-	skinMaxTemp = 873.15
-	
-	//  ============================================================================
-	//	Modules and Resources
-	//  ============================================================================
-		
-	MODULE
-	{
-		name = ModuleConnectedLivingSpace
-		passable = true
-	}
-	
-	MODULE
-	{
-		name = ModuleDecouple
-		ejectionForce = 0
-		explosiveNodeID = bottom
-	}
-	
+
 	INTERNAL
 	{
 		name = GenericSpace3
 	}
-	
+
+	scale = 1.0
+	rescaleFactor = 1.0
+
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
+
+	attachRules = 1,0,1,1,0
+
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	sound_decoupler_fire = decouple
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
+	TechRequired = unlockParts
+	cost = 150
+	entryCost = 1
+	category = Utility
+	subcategory = 0
+	title = Voskhod Airlock
+	manufacturer = OKB-1
+	description = The Voskhod Airlock will allow for your crew to perform an EVA from the Voskhod airlock. Attach this to the node on the side of the Voskhod capsule. Transfer your crew memeber inside and perform your EVA. Be sure to decouple this before re-entry.
+	tags = soviet, capsule, crew, voskhod, airlock, eva
+
+	CrewCapacity = 1
+	bulkheadProfiles = size1
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
+	mass = 0.339
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	crashTolerance = 1
+	breakingForce = 250
+	breakingTorque = 250
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	stagingIcon = DECOUPLER_HOR
+	fuelCrossFeed = True
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
-		name = ModuleEngines
-		thrustVectorTransformName = thrustTransform
-		throttleLocked = True
-		exhaustDamage = True
-		ignitionThreshold = 0.1
-		minThrust = 0
-		maxThrust = 0.5
-		heatProduction = 200
-		useEngineResponseTime = True
-		engineAccelerationSpeed = 2.0
-		allowShutdown = False
-		fxOffset = 0, 0, 0
-		staging = false
-		PROPELLANT
-		{
-			name = PSPC
-			ratio = 1.0
-			DrawGauge = True
-		}
-		atmosphereCurve
-		{
-			key = 0 120
-			key = 1 90
-		}
-		ActivatesEvenIfDisconnected = true	
-	}
-	
-	RESOURCE
-	{
-		name = PSPC
-		amount = 0.431
-		maxAmount = 0.431
-	}
-	
-	//  ============================================================================
-	//	Comms
-	//  ============================================================================
-	
-	
-	//  ============================================================================
-	//	Animations and Textures
-	//  ============================================================================
-	
-	MODULE
-	{
-		name = BDFSanimateGeneric
+		name = ModuleAnimateGeneric
 		animationName = Deploy
+		isOneShot = false
 		startEventGUIName = Inflate Airlock
 		endEventGUIName = Deflate Airlock
 		toggleActionName = Toggle Airlock
-		startDeployed = False
-		// Animation Layer. If you have more than one animation on a part, this must be unique for each one in order for them to not interrupt each other. If the stock engine heat animation module is used, that’s probably on layer 0, so make this 1 or higher.
-		layer = 1
-		playAnimationOnEditorSpawn = False
-		useActionEditorPopup = True
-		// If you have more than one BDFSanimateGeneric on a part, give each a unique ID to. This makes the popup menu appear in a separate location for each module, and not steal each others windows. values: 0-9.
-		moduleID = 0
+		allowAnimationWhileShielded = False
 	}
-	
-	MODULE:NEEDS[!TexturesUnlimited]
-    {
-        name = ReflectiveShaderModule
 
-        // Lower values for performance, higher values for aesthetics (you shouldn't ever need to go higher than 1024).
-        CubeMapSize = 16
+	MODULE
+	{
+		name = ModuleDecouple
+		menuName = Jettison Airlock
+		ejectionForce = 0
+		isOmniDecoupler = False
+		explosiveNodeID = bottom
+	}
 
-        // How deep the reflection will be ("how far the reflection camera will view")
-        FarClipPlane = 500000000
-		// How far away must something be before it is reflected
-		NearClipPlane = .1
+	MODULE
+	{
+		name = ModuleEnginesRF
+		thrustVectorTransformName = thrustTransform
+		EngineType = SolidBooster
+		allowShutdown = False
+		throttleLocked = True
+	}
 
-        // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
-        OneFacePerFrame = true
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.3
+		maxDistance = 30
+		falloff = 1.7
+		thrustTransformName = thrustTransform
+	}
 
-        // The shader to find. The reflective shaders are:
-        // Reflective/Diffuse
-        // Reflective/VertexLit
-        // Reflective/Bumped Diffuse
-		//Reflective/Bumped Specular
-        ShaderName = Reflective/Bumped Diffuse
-		realTimeReflection = False
-		
+	MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = AirlockRetro
+		modded = false
+		CONFIG
+		{
+			name = AirlockRetro
+			minThrust = 0.5
+			maxThrust = 0.5
+			heatProduction = 100
 
-        // The height of the parallax map. Values are accepted between 0.005 and 0.08.
-        ParallaxHeight = 0.01
+			ullage = False
+			pressureFed = False
+			ignitions = 0
 
-        // How reflective the reflection will be (Weakest 0.0 - 1.0 Strongest).
-        ReflectionStrength = 0.50
-		//ReflectionColor = 0, 0, 0, 0
+			PROPELLANT
+			{
+				name = PSPC
+				ratio = 1.0
+				DrawGauge = True
+			}
+			atmosphereCurve
+			{
+				key = 0 120
+				key = 1 90
+			}
+		}
+	}
 
-        // Use this variable to specify which meshes to apply the shader to.
-        // Not using this variable will default to the first found mesh.
-        // Use the actual mesh name for the value. Or you could use:
-        // all - to replace the shader on all meshes in the model.
-        MeshesToChange = airlock_base,ribs,bar1,bar2
+	MODULE
+	{
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 0.431
+		basemass = -1
+		TANK
+		{
+			name = PSPC
+			amount = 0.431
+			maxAmount = 0.431
+			isTweakable = False
+		}
+	}
 
-        // How shiny the specularity will be (if specular).
-        // This value will be automatically set if it already exists on the previous shader and is not defined here.
-        Shininess = 1.0
-		updateRate = 130
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = true
+	}
+}
 
-        // These variables should be used together only.
-        // These values will be automatically set if they already exist on the previous shader and are not defined here
-        SpecColorR = 0.8
-        SpecColorG = 0.8
-        SpecColorB = 0.8
-        SpecColorA = 0.8
-		rimFalloff = 5.0
-		rimColor = 0.8242, 0.6445, 0.1914, 1.0
-		ReflectionColor = 0.6242, 0.6445, 0.69, 1.0
-    }
+//	================================================================================
+//	Configure RealPlume
+//	================================================================================
+
+@PART[ROC-VoskhodAirlock]:BEFORE[RealPlume]
+{
+	PLUME
+	{
+		name = Solid-Sepmotor
+		transformName = thrustTransform
+		localRotation = 0,0,0
+		localPosition = 0,0,-0.05
+		fixedScale = 0.8
+		energy = 1
+		speed = 1
+	}
+
+	@MODULE[ModuleEngines*]
+	{
+		%powerEffectName = Solid-Sepmotor
+		!runningEffectName = DELETE
+	}
+
+	@MODULE[ModuleEngineConfigs]
+	{
+		@CONFIG,*
+		{
+			%powerEffectName = Solid-Sepmotor
+		}
+	}
 }
