--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-ApolloHSBlockIII+
+	name = ROC-ApolloHSBlockIII
 	module = Part
 	author = CobaltWolf, capkirk
 
@@ -87,7 +87,7 @@ PART
 }
 
 // Specific adjustments after default setup
-@PART[ROC-ApolloHSBlockIII+]:AFTER[RealismOverhaul_HeatShield]
+@PART[ROC-ApolloHSBlockIII]:AFTER[RealismOverhaul_HeatShield]
 {
 	@MODULE[ModuleAblator]
 	{
