Add Apollo Block III+ Service Module & Apollo Block IV Engine (#66)
* Add Apollo Block III+ Service Module & Apollo Block IV Engine Plus fixes for other issues.
* Fix Block V HGA Rotation
* Fix Realplume Configs
* Fix Gimbal
* Update README.md

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism.cfg
@@ -3,17 +3,32 @@ PART
 	name = ROC-ApolloDockingProbe
 	module = Part
 	author = CobaltWolf, capkirk
+
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block2_ActiveDockingMechanism
 	}
-	RSSROConfig = True
+
 	rescaleFactor = 1.5646
 	scale = 1.0
+
 	node_stack_bottom = 0.0, -0.036, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, 0.03599977, 0.0, 0.0, 1.0, 0.0, 1
-	//stackSymmetry = 1
+
+	attachRules = 1,0,1,1,1
+
 	sound_vent_large = decouple
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = dockingCrewTransfer
 	entryCost = 1000
 	cost = 2000
@@ -22,7 +37,14 @@ PART
 	title = Apollo Docking Mechanism Probe
 	manufacturer = North American Aviation
 	description = Once soft docking is achieved and the vessels properly aligned, retract the probe to hard dock and establish a solid connection. IT WILL ONLY WORK WITH THE Apollo Docking Drogue.
-	attachRules = 1,0,1,1,1
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
+
+	bulkheadProfiles = size0
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.036
 	dragModelType = default
 	maximum_drag = 0.19
@@ -35,9 +57,10 @@ PART
 	skinMaxTemp = 773.15
 	fuelCrossFeed = false
 	stagingIcon = DECOUPLER_VERT
-	bulkheadProfiles = size0
 
-	tags = berth capture connect couple dock fasten join moor socket Apollo Kane block ?2 ?3 ?4 ?5 ?ii ?iii ?iv ?v aardv skylab hokulani
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
 
 	MODULE
 	{
@@ -68,5 +91,4 @@ PART
 		actionGUIName = Toggle Probe
 		allowAnimationWhileShielded = False
 	}
-
 }
