--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
@@ -3,20 +3,37 @@ PART
 	name = ROC-ApolloDecoupler
 	module = Part
 	author = CobaltWolf, capkirk123
+
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block2_Decoupler
 		rotation = 0.0, 30.0, 0.0
 	}
-	RSSROConfig = True
+
 	rescaleFactor = 1.6047
 	scale = 1.0
+
 	node_stack_top = 0.0, -0.167, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.168, 0.0, 0.0, -1.0, 0.0, 2
+
+	attachRules = 1,0,1,1,0
+
 	buoyancy = 0.2
 	buoyancyUseSine = False
+
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = dockingCrewTransfer
 	entryCost = 2800
 	cost = 200
@@ -25,7 +42,14 @@ PART
 	title = Apollo Command/Service Module Decoupler
 	manufacturer = North American Aviation
 	description = This is used to decouple the Command Module from the Service Module prior to reentry. This one has been seperated from the Service Module, to allow you to attatch whatever you want to your Apollo capsule
-	attachRules = 1,0,1,1,0
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
+
+	bulkheadProfiles = size2
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.9504
 	dragModelType = default
 	maximum_drag = 0.2
@@ -39,9 +63,10 @@ PART
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
-	bulkheadProfiles = size2
 
-	tags = break decouple separate split stack stag Apollo block ?1 ?2 ?3 ?4 ?5 ?i ?ii ?iii ?iv ?v
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
 
 	MODULE
 	{
@@ -51,7 +76,7 @@ PART
 		endEventGUIName = Lock CSM Umbilical
 		actionGUIName = Toggle CSM Umbilical
 	}
-	
+
 	MODULE
 	{
 		name = ModuleDecouple
@@ -70,5 +95,4 @@ PART
 		toggleEditor = true
 		toggleFlight = true
 	}
-
 }
