--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
@@ -3,17 +3,34 @@ PART
 	name = ROC-ApolloMissionModule
 	module = Part
 	author = CobaltWolf, capkirk
-	
+
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_MissionModule
 	}
-	
-	RSSROConfig = True
+
+	INTERNAL
+	{
+		name = crewCabinInternals
+	}
+
 	rescaleFactor = 1.56463
+
 	node_stack_top = 0.0, 0.986899, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.906899, 0.0, 0.0, -1.0, 0.0, 2
-	
+
+	attachRules = 1,0,1,1,0
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = improvedCapsules
 	CrewCapacity = 2
 	cost = 7000
@@ -22,7 +39,15 @@ PART
 	title = Apollo Block III+ Mission Module
 	manufacturer = Rockwell International
 	description = In order to increase the living space and mission duration of the Apollo Block III CSM. This mission module is essentially several more cubic meters of living space for the crew. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization. FICTIONAL (Eyes Turned Skyward)
-	attachRules = 1,0,1,1,0
+	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
+
+	vesselType = Ship
+	bulkheadProfiles = size2
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 3.25
 	dragModelType = default
 	maximum_drag = 0.2
@@ -33,15 +58,11 @@ PART
 	breakingTorque = 200
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	skinMaxTemp = 2000
-	vesselType = Ship
-	bulkheadProfiles = size2
-	tags = base cabin outpost passenger station tour tuna Apollo orbital mission module block ?3 ?iii
-	
-	INTERNAL
-	{
-		name = crewCabinInternals
-	}
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -49,6 +70,7 @@ PART
 		volume = 750
 		basemass = -1
 	}
+
 	MODULE
 	{
 		name = ModuleScienceExperiment
@@ -64,6 +86,7 @@ PART
 		usageReqMaskInternal = 5
 		usageReqMaskExternal = -1
 	}
+
 	MODULE
 	{
 		name = ModuleScienceContainer
@@ -72,6 +95,7 @@ PART
 		evaOnlyStorage = True
 		storageRange = 2.0
 	}
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -81,6 +105,7 @@ PART
 		actionGUIName = Toggle Lights
 		defaultActionGroup = Light
 	}
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -96,22 +121,25 @@ PART
 {
 	@name = ROC-ApolloMissionModule4
 	@author = CobaltWolf
+
 	@MODEL
 	{
 		@model = ROCapsules/Assets/BDB/bluedog_Apollo_Block4_MissionModule
 	}
+
 	@node_stack_top = 0.0, 1.02, 0.0, 0.0, 1.0, 0.0, 2
 	@node_stack_bottom = 0.0, -1.02, 0.0, 0.0, -1.0, 0.0, 2
-
-	@title = Apollo Block IV Mission Module
-	@description = Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
-
-	@mass = 4.5
 
 	@TechRequired = composites
 	@entryCost = 1400
 	@cost = 10000
-	%tags = base cabin (can outpost passenger statio tour tuna Apollo Kane orbital mission module block ?4 ?iii
+
+	@title = Apollo Block IV Mission Module
+	@description = Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
+
+	%tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
+
+	@mass = 4.5
 
 	@MODULE[ModuleFuelTanks]
 	{
