--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/TU_Support_ApolloETS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/TU_Support_ApolloETS.cfg
@@ -4,12 +4,13 @@
 KSP_MODEL_SHADER
 {
 	name = ROC-APAS8995A
-	
+
 	model = ROCapsules/Assets/BDB/APAS/CXA_APAS_A_L04F
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Active_Ring
 		mesh = Guide_Fin
 		mesh = Apas_Fin_Anchor
@@ -37,8 +38,7 @@ KSP_MODEL_SHADER
 		mesh = Cylinder_bottom_003
 		mesh = Cylinder_bottom_004
 		mesh = Cylinder_bottom_005
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -59,12 +59,13 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-APAS8995P
-	
+
 	model = ROCapsules/Assets/BDB/APAS/CXA_APAS_P
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Alignment
 		mesh = Cross
 		mesh = Cross_Standoff
@@ -81,8 +82,7 @@ KSP_MODEL_SHADER
 		mesh = Outer_Wall
 		mesh = Radial_Attachments
 		mesh = round_plate
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -103,15 +103,16 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloCMBlockIII
-	
+
 	model = ROCapsules/Assets/DECQ/Apollo/CM
 	model = ROCapsules/Assets/DECQ/Apollo/CM_ForwardHS
 	model = ROCapsules/Assets/DECQ/Apollo/HGA
 	model = ROCapsules/Assets/DECQ/Apollo/RCS
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = CM
 		mesh = mesh_030_026
 		mesh = mesh_030_019
@@ -128,7 +129,7 @@ KSP_MODEL_SHADER
 		mesh = ap-pro3_003
 		mesh = ap-pro3_005
 		mesh = ap-pro3_006
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -149,16 +150,48 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloDecoupler
-	
+
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block2_Decoupler
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Decoupler
 		mesh = Umbilical
-		
-		
+
+		PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
+KSP_MODEL_SHADER
+{
+	name = ROC-ApolloSMBlockIII
+
+	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_ServiceModule
+
+	MATERIAL
+	{
+		shader = TU/Metallic
+
+		mesh = pCylinder142
+		mesh = polySurface26
+		mesh = polySurface50
+		mesh = polySurface142
+
 		PROPERTY
 		{
 			name = _Color
@@ -179,17 +212,61 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloEngineBlockIII
-	
+
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_ServiceEngine
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Apollo_ServiceEngine_Merged_Apollo_ServiceEngineMesh_group1
 		mesh = bell
 		mesh = polySurface29
-		
-		
+
+		excludeMesh = innerGlow
+		excludeMesh = innerGlow 1
+
+		PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
+KSP_MODEL_SHADER
+{
+	name = ROC-ApolloEngineBlockV
+
+	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_ServiceEngine
+
+	MATERIAL
+	{
+		shader = TU/Metallic
+
+		mesh = bluedog_LEM_Snap3_0002_LEM_Descent_Engine_pCylinder71
+		mesh = bluedog_LEM_Snap3_0002_pCylinder70
+		mesh = pCube55
+		mesh = pCube59
+		mesh = pCube60
+		mesh = pCylinder138
+		mesh = pCylinder139
+		mesh = pCylinder139_ncl1_1
+		mesh = polySurface29
+		mesh = pTorus3
+
+		excludeMesh = innerGlow
+		excludeMesh = innerGlow 1
+
 		PROPERTY
 		{
 			name = _Color
@@ -210,18 +287,18 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloHGABlockIII
-	
+
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_HGA
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Block3_HighGain
 		mesh = pCylinder43
 		mesh = pCylinder81
 		mesh = pCylinder44
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -242,17 +319,17 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloHGABlockV
-	
+
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_HGA
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = base
 		mesh = BlockV_HighGainAntenna_Merged_base_ArmRotate_DishHinge_pCylinder133
 		mesh = pCylinder132
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -273,16 +350,16 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloMissionModule
-	
+
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_MissionModule
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Hull
 		mesh = Spotlight
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
@@ -303,16 +380,16 @@ KSP_MODEL_SHADER
 KSP_MODEL_SHADER
 {
 	name = ROC-ApolloMissionModule4
-	
+
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block4_MissionModule
-	TEXTURE
+
+	MATERIAL
 	{
 		shader = TU/Metallic
-		
+
 		mesh = Hull
 		mesh = Spotlight
-		
-		
+
 		PROPERTY
 		{
 			name = _Color
