--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -3,17 +3,30 @@ PART
 	name = ROC-ApolloHGABlockIII
 	module = Part
 	author = CobaltWolf, capkirk
-	
+
+	RSSROConfig = True
+
+	//	============================================================================
+	//	Model and Dimensions
+	//	============================================================================
+
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_HGA
 		rotation = 0.0, -60.0, 0.0
 	}
-	
-	RSSROConfig = True
+
 	scale = 1
 	rescaleFactor = 1.5646
+
 	node_attach = 0.0, 0.04, 0.0, 0.0, 1.0 , 0.0
+
+	attachRules = 1,1,0,0,1
+
+	//	============================================================================
+	//	Title, Description, Category, Techs
+	//	============================================================================
+
 	TechRequired = improvedCapsules
 	entryCost = 1500
 	cost = 1000
@@ -22,7 +35,14 @@ PART
 	title = Apollo Block III High Gain Antenna
 	manufacturer = Rockwell International
 	description = A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)
-	attachRules = 1,1,0,0,1
+	tags = apollo, block-III, block-3, eyes turned skyward
+
+	bulkheadProfiles = srf
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.01
 	dragModelType = default
 	maximum_drag = 0.2
@@ -32,10 +52,11 @@ PART
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	PhysicsSignificance = 1
-	bulkheadProfiles = srf
-	
-	tags = aerial antenna radio signal transmit comm communicat dish Apollo Kane block ?3 ?4 ?iii ?iv aardv
-	
+
+	//	============================================================================
+	//	Modules and Resources
+	//	============================================================================
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -46,6 +67,10 @@ PART
 		actionGUIName = Toggle Antenna
 		allowAnimationWhileShielded = False
 	}
+
+//	================================================================================
+//	Comms
+//	================================================================================
 
 	MODULE:NEEDS[!RemoteTech]
 	{
@@ -59,6 +84,7 @@ PART
 		antennaPower = 10000000
 		antennaCombinable = True
 	}
+
 	MODULE:NEEDS[RemoteTech]
 	{
 		// Changed to be the same as the Communotron 16. Only designed for LEO use.
@@ -76,6 +102,12 @@ PART
 	}
 }
 
+//	================================================================================
+//	Configure RealAntennas
+//	================================================================================
+// A steerable unified S-band high-gain antenna for long-range communications with Earth was mounted on the aft bulkhead.
+// https://en.wikipedia.org/wiki/Apollo_command_and_service_module#Communications_system
+
 @PART[ROC-ApolloHGABlockIII]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
@@ -83,11 +115,6 @@ PART
 	{
 		name = ModuleRealAntenna
 		antennaDiameter = 0.9	//Guess, no documentation
-	}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 3.0		//Guess based on Block II
-		RFBand = S
+		RFBand = S	//Default to S-band
 	}
 }
