Fix merge errors, remove liftingsurface

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -49,10 +49,13 @@ PART
 	title = Apollo Block III+ Command Module (CM)
 	manufacturer = Rockwell International
 	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
-  
+
+	TechRequired = start
+	entryCost = 1
+	cost = 1
 	category = Pods
 	subcategory = 0
-	
+
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v
 	
 	vesselType = Ship
@@ -180,21 +183,6 @@ PART
 		endEventGUIName = Turn Off Lights
 		actionGUIName = Toggle Lights
 		defaultActionGroup = Light
-	}
-
-	MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.4
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
 	}
 
 	MODULE
